--- a/professores.html
+++ b/professores.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Ola Mundo</title>
+
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
@@ -20,8 +23,8 @@
     <main>
         <section>
             <div>
-                <img src="fotos/Daniel_photo.7d445ed6.png"  width="300" alt="Devaria - Olá Mundo!">
-                <img src="fotos/Rafael_photo.1466e991.png"  width="300" alt="Devaria - Olá Mundo!">
+                <img src="public/fotos/Daniel_photo.7d445ed6.png"  width="300" alt="Devaria - Olá Mundo!">
+                <img src="public/fotos/Rafael_photo.1466e991.png"  width="300" alt="Devaria - Olá Mundo!">
             </div>
         </section>
         <div>
