--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Contact</title>
+
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
