--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <meta name="author" content="Samuel Espíndola">
     <!-- Marcação para informar o tempo de refresh -->
     <meta http-equiv="refresh" content="50">
+
     <title>Ola Mundo</title>
+    
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
@@ -27,7 +30,7 @@
     </header>
     <main>
         <figure>
-            <img src="fotos/devaria_logo.jpg"  width="300" alt="Devaria - Olá Mundo!">
+            <img src="public/fotos/devaria_logo.jpg"  width="300" alt="Devaria - Olá Mundo!">
             <figcaption>Figura de capa Devaria</figcaption>
         </figure>
         <section>
