criado o header(cabeçalho)

--- a/professores.html
+++ b/professores.html
@@ -6,21 +6,26 @@
     
     <title>Ola Mundo</title>
 
+    <link rel="stylesheet" href="public/css/header.css">
+    <link rel="stylesheet" href="public/css/devaria.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Olá Professores</h1>
-        <nav>
+        <a href="index.html" class="link-logo">
+            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria" style="width: 300px;">
+        </a>
+       
+        <nav class="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="">Professores</a></li>
+                <li><a href="professores.html">Professores</a></li>
                 <li><a href="FaleConosco.html">Fale Conosco</a></li>
                 <li><a href="devstar.html">Devstart</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <h1>Olá Professores</h1>
         <section>
             <div>
                 <img src="public/fotos/Daniel_photo.7d445ed6.png"  width="300" alt="Devaria - Olá Mundo!">
