--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -6,21 +6,25 @@
 
     <title>Contact</title>
 
+    <link rel="stylesheet" href="public/css/header.css">
+    <link rel="stylesheet" href="public/css/devaria.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Entre em contato conosco</h1>
-        <nav>
+        <a href="index.html" class="link-logo">
+            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria" style="width: 300px;">
+        </a>
+        <nav class="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li><a href="professores.html">Professores</a></li>
-                <li><a href="">Fale Conosco</a></li>
+                <li><a href="FaleConosco.html">Fale Conosco</a></li>
                 <li><a href="devstar.html">Devstart</a></li>
             </ul>
         </nav>
     </header>
     <main>
+        <h1>Entre em contato conosco</h1>
         <h2>Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
         <form action="index.html">
             <p>
