--- a/index.html
+++ b/index.html
@@ -13,26 +13,34 @@
     <meta http-equiv="refresh" content="50">
 
     <title>Ola Mundo</title>
-    
+    <link rel="stylesheet" href="public/css/header.css">
+    <link rel="stylesheet" href="public/css/devaria.css">
+    <link rel="stylesheet" href="public/css/index.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Olá mundo... Devaria</h1>
-        <nav>
+        <a href="index.html" class="link-logo">
+            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria" style="width: 300px;">
+        </a>
+        <nav class="menu">
             <ul>
-                <li><a href="">Home</a></li>
                 <li><a href="professores.html">Professores</a></li>
                 <li><a href="FaleConosco.html">Fale Conosco</a></li>
                 <li><a href="devstar.html">Devstart</a></li>
             </ul>
         </nav>
     </header>
+    <h1>Olá mundo... Devaria</h1>
     <main>
-        <figure>
-            <img src="public/fotos/devaria_logo.jpg"  width="300" alt="Devaria - Olá Mundo!">
-            <figcaption>Figura de capa Devaria</figcaption>
-        </figure>
+        <section class="cover-container">
+            
+            <figure>
+                <img src="public/fotos/devaria.8015ea18.png" alt="Devaria - Olá Mundo!">
+                <figcaption>Figura de capa Devaria</figcaption>
+            </figure>
+        </section>
+
         <section>
             <video src="https://www.youtube.com/watch?v=DyTiCXknEN4&source_ve_path=Mjg2NjY&feature=emb_logo" ></video>
         </section>
