--- a/professores.html
+++ b/professores.html
@@ -8,12 +8,13 @@
 
     <link rel="stylesheet" href="public/css/header.css">
     <link rel="stylesheet" href="public/css/devaria.css">
+    <link rel="stylesheet" href="public/css/footer.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
         <a href="index.html" class="link-logo">
-            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria" style="width: 300px;">
+            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria">
         </a>
        
         <nav class="menu">
