corrigido estrutura do index.html & estilização do footer

--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <h1>Entre em contato conosco</h1>
+        <h1 class="title">Entre em contato conosco</h1>
         <h2>Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
         <form action="index.html">
             <p>
