--- a/devstar.html
+++ b/devstar.html
@@ -27,7 +27,7 @@
     
     
     <main>
-        <h1>Ranking Devstart</h1>
+        <h1 class="title">Ranking Devstart</h1>
 
         <h2>Como funciona o método Devstart?</h2>
         <section>
