--- a/professores.html
+++ b/professores.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <main>
-        <h1>Olá Professores</h1>
+        <h1 class="title">Olá Professores</h1>
         <section>
             <div>
                 <img src="public/fotos/Daniel_photo.7d445ed6.png"  width="300" alt="Devaria - Olá Mundo!">
