estilizado a página de professores

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <h1 class="title">Olá mundo Devaria</h1>
-    <main>
+    <main class="text-center">
         
         <section class="cover-container">
             <figure>
