--- a/professores.html
+++ b/professores.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="public/css/header.css">
     <link rel="stylesheet" href="public/css/devaria.css">
     <link rel="stylesheet" href="public/css/footer.css">
+    <link rel="stylesheet" href="public/css/professores.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
@@ -26,24 +27,22 @@
         </nav>
     </header>
     <main>
-        <h1 class="title">Olá Professores</h1>
-        <section>
-            <div>
-                <img src="public/fotos/Daniel_photo.7d445ed6.png"  width="300" alt="Devaria - Olá Mundo!">
-                <img src="public/fotos/Rafael_photo.1466e991.png"  width="300" alt="Devaria - Olá Mundo!">
+        <h1 class="title text-center">Olá Professores</h1>
+        <section class="content-container">
+            <div class="text-center">
+                <img src="public/fotos/Daniel_photo.7d445ed6.png"  alt="Devaria - Olá Mundo!">
+                <img src="public/fotos/Rafael_photo.1466e991.png"  alt="Devaria - Olá Mundo!">
             </div>
+                <article>
+                    <h2 class="title">Dani, Rafa</h2>
+                        <p class="text-justify w-70pct-desketop">
+                        Os professores são especialistas em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência</em>.
+                        </p>
+                        <p class="text-justify w-70pct-desketop">
+                        Todas as aulas de Back e Front serão conduziadas mais pelo Rafa, Do e Fi, e as aulas mais de gestão e operações ficará com o Dani.
+                        </p>
+                </article>
         </section>
-        <div>
-            <article>
-                <h2>Dani, Rafa</h2>
-                    <p>
-                    Os professores são especialistas em <strong>desenvolvimento de sistemas</strong> e possuem mais de <em>10 anos de experiência</em>.
-                    </p>
-                    <p>
-                    Todas as aulas de Back e Front serão conduziadas mais pelo Rafa, Do e Fi, e as aulas mais de gestão e operações ficará com o Dani.
-                    </p>
-            </article>
-        </div>
     </main>
     <footer>
         <section>
