--- a/FaleConosco.html
+++ b/FaleConosco.html
@@ -9,62 +9,66 @@
     <link rel="stylesheet" href="public/css/header.css">
     <link rel="stylesheet" href="public/css/devaria.css">
     <link rel="stylesheet" href="public/css/footer.css">
+    <link rel="stylesheet" href="public/css/fale-conosco.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body>
     <header>
         <a href="index.html" class="link-logo">
-            <img src="public/fotos/logo_horizontal.svg" alt="Logo Devaria">
+            <img src="public/fotos/logo_horizontal.svg" alt="Logo devaria" />
         </a>
         <nav class="menu">
             <ul>
-                <li><a href="professores.html">Professores</a></li>
+                <li><a href="Professores.html"> Professores</a></li>
                 <li><a href="FaleConosco.html">Fale Conosco</a></li>
-                <li><a href="devstar.html">Devstart</a></li>
+                <li><a href="DevStars.html">DevStars</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1 class="title">Entre em contato conosco</h1>
-        <h2>Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
-        <form action="index.html">
-            <p>
-                <label for="Nome">Nome:</label><input type="text" name="Nome" maxlength="50">
-            </p>
-            <p>
-                <label for="Email">Email:</label><input type="email" name="Email">
-            </p>
-            <p>
-                <label for="comentario">Comentarios</label> <textarea name="comentario"  cols="50" rows="10"></textarea>
-            </p>
-            <p>
-                <label for="Sexo">Sexo:</label>
-                <input type="radio" name="Sexo" id=""><label for="">Feminino</label>
-                <input type="radio" name="Sexo" id=""><label for="">Masculino</label>
-            </p>
-            <p>
-                <label for="select">Onde você conhecei a devaria</label>
-                <select name="select" id="">
-                    <option value="">Amigos</option>
-                    <option value="">Redes sociais</option>
-                    <option value="">Recomendações</option>
-                    <option value="">Anuncios</option>]
+        <h1 class="title text-center">Fale com a devaria através dessa página</h1>
+        <h2 class="sub-title text-center">Para entrar em contato preencha os campos abaixo e clique em enviar</h2>
+        <form action="index.html" class="contact-form margin-horizontal-20px">
+            <div>
+                <label>Nome:</label>
+                <input type="text" name="Nome" maxlength="70" required="true" />
+            </div>
+            <div>
+                <label>E-mail:</label>
+                <input type="text" name="Email" maxlength="150" required="true" />
+            </div>
+            <div>
+                <label>Comentários:</label>
+                <textarea name="Comentario" cols="50" rows="4" required="true"></textarea>
+            </div>
+            <div>
+                <label>Sexo:</label>
+                <input type="radio" name="Sexo" /><span>Feminino</span>
+                <input type="radio" name="Sexo" /><span>Masculino</span>
+            </div>
+            <div>
+                <label>Aonde você conheceu a Devaria?</label>
+                <select name="Conheceu">
+                    <option>Youtube</option>
+                    <option>Amigos</option>
+                    <option selected>Google</option>
+                    <option>Outros</option>
                 </select>
-            </p>
-            <p>
-                <input type="checkbox" name="Aceite">
-                <label for="Aceite">Aceito receber novidades da Devaria</label>
-            </p>
-            <p>
-                <input type="submit" value="Enviar">
-                <input type="reset" value="resetar">
-            </p>
+            </div>
+            <div>
+                <input type="checkbox" name="Aceite" />
+                <span>Aceito receber novidades da Devaria</span>
+            </div>
+            <div>
+                <input type="submit" name="Enviar" value="Enviar" />
+                <input type="reset" name="Limpar" value="Limpar" />
+            </div>
         </form>
     </main>
     <footer>
         <section>
             <span>contato@devaria.com.br</span> <br />
-            <span>Conheça o nosso canal do Youtube! </span>
+            <span>Conheça o nosso canal do Youtube!</span>
         </section>
     </footer>
 </body>
